# piclusterv2

./: README.md
testing/rt/base-rt-app/: CMakeLists.txt  compile  run
testing/rt/base-rt-app/src/: main.c
testing/rt/multicore-rt-app/: CMakeLists.txt  compile  run
testing/rt/multicore-rt-app/slurm/: slurm-run.sh  slurm-submission.sh
testing/rt/multicore-rt-app/slurm/console/: slurm_console.out
testing/rt/multicore-rt-app/slurm/mpi-config/: hostfile
testing/rt/multicore-rt-app/src/: main.c
